syntax = "proto3";

package api;
option go_package = "github.com/sunggun-yu/hello-app/grpc";

service HelloService {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message PingRequest {}

message PingResponse {
  string message = 1;
  string service = 2;
  string version = 3;
  string instance = 4;
  string timestamp = 5;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
